--- a/barbearia.api/src/main/resources/application.properties
+++ b/barbearia.api/src/main/resources/application.properties
@@ -1,11 +1,10 @@
+spring.config.import=optional:file:.env[.properties]
 spring.application.name=barbearia.api
-spring.data.mongodb.uri=mongodb://localhost:27017/barbearia_db
 
-# CONFIGURAÇÃO OAUTH2 (LOGIN COM GOOGLE)
-spring.security.oauth2.client.registration.google.client-id=12206979013-qo9dd1cep983lqv5afrnv976glleovgs.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.data.mongodb.uri=${MONGODB_URI}
 
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid, email, profile
 
-# CONFIGURAÇÃO DO JWT (JSON Web Token)
-app.jwt.secret=app.jwt.secret=k@8b$Z!E(H+MbQeThVmYq3t6w9z$C&F)J@NcRfUjWnZr4u7x!A%D*G-KaPdSgVkY
+app.jwt.secret=${JWT_SECRET}
