--- a/barbearia.api/src/main/resources/application.properties
+++ b/barbearia.api/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.scope=openid, email, profile
 
 app.jwt.secret=${JWT_SECRET}
+
+# CONFIGURAÇÃO DO STRIPE (Pagamentos)
+stripe.secret.key=${STRIPE_SECRET_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
+
+# URLs que o Stripe vai usar
+stripe.success.url=http://localhost:3000/bookings
+stripe.cancel.url=http://localhost:3000
